# pretix-email-templates

./: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
pretix_es_mail/: apps.py  renderer.py  signals.py
pretix_es_mail/templates/pretix_es_mail/: simple.html
