[project]
name = "pretix-es-mail"
dynamic = ["version"]
description = "Simple HTML Email Renderer for Pretix"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "Electroservices Team", email = "electrovesta@gmail.com"},
]
maintainers = [
    {name = "Electroservices Team", email = "electrovesta@gmail.com"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_es_mail = "pretix_es_mail:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/kongr45gpen/pretix-email-templates"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_es_mail.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
